aprendiendo eventos y como validar formularios

--- a/css/style.css
+++ b/css/style.css
@@ -236,6 +236,13 @@ img {
     text-transform: uppercase;
 }
 .correcto {
+    background-color: rgb(20, 225, 123);
+    text-align: center;
+    padding: 1rem;
+    color: var(--blanco);
+    text-transform: uppercase;
+}
+.correcto {
     background-color: rgb(74, 185, 0);
     text-align: center;
     padding: 1rem;
